# googletest-container

./: CMakeLists.txt  Dockerfile  README.md  build-container.sh  main.cpp  run-container.sh
